--- a/.github/workflows/update-design-system.yml
+++ b/.github/workflows/update-design-system.yml
@@ -5,12 +5,14 @@ on:
     types: [design-system-update]
 
 jobs:
-  update-data:
+  update-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_PAT }}
+          fetch-depth: 0
 
       - name: Update data.json
         env:
@@ -24,16 +26,11 @@ jobs:
 
       - name: Commit and push if changed
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git add data.json
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update design system data" && git push)
 
-  deploy:
-    needs: update-data
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
