--- a/.github/workflows/update-design-system.yml
+++ b/.github/workflows/update-design-system.yml
@@ -14,15 +14,72 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Update data.json
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install axios
+
+      - name: Update data.json with image
         env:
+          FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
           UPDATE_DATA: ${{ toJson(github.event.client_payload) }}
         run: |
-          if [ ! -f data.json ]; then
-            echo "[]" > data.json
-          fi
-          content=$(jq --argjson newData "$UPDATE_DATA" '. = [$newData] + . | .[0:50]' data.json)
-          echo "$content" > data.json
+          node << EOF
+          const axios = require('axios');
+          const fs = require('fs').promises;
+
+          async function processUpdate() {
+            const updateData = JSON.parse(process.env.UPDATE_DATA);
+            const { file_key, timestamp, triggered_by, description, file_name, created_components, modified_components, created_styles, modified_styles } = updateData;
+
+            try {
+              // Get image preview
+              const imageResponse = await axios.get(`https://api.figma.com/v1/images/${file_key}?ids=0&format=png`, {
+                headers: { 'X-Figma-Token': process.env.FIGMA_TOKEN }
+              });
+              const preview_image = imageResponse.data.images['0'];
+
+              // Prepare update data
+              const newUpdate = {
+                file_name,
+                description,
+                triggered_by,
+                timestamp,
+                preview_image,
+                created_components,
+                modified_components,
+                created_styles,
+                modified_styles
+              };
+
+              // Read existing data.json
+              let currentData = [];
+              try {
+                const fileContent = await fs.readFile('data.json', 'utf8');
+                currentData = JSON.parse(fileContent);
+              } catch (error) {
+                console.log('data.json not found or empty, creating new array');
+              }
+
+              // Add new update and limit to 50 entries
+              currentData.unshift(newUpdate);
+              currentData = currentData.slice(0, 50);
+
+              // Write updated data back to data.json
+              await fs.writeFile('data.json', JSON.stringify(currentData, null, 2));
+
+              console.log('data.json updated successfully');
+            } catch (error) {
+              console.error('Error processing update:', error.message);
+              process.exit(1);
+            }
+          }
+
+          processUpdate();
+          EOF
 
       - name: Commit and push if changed
         run: |
