--- a/.github/workflows/update-design-system.yml
+++ b/.github/workflows/update-design-system.yml
@@ -2,7 +2,7 @@ name: Update Design System
 
 on:
   repository_dispatch:
-    types: [design-system-update]
+    types: [figma-webhook]
 
 jobs:
   update-and-deploy:
@@ -22,18 +22,38 @@ jobs:
       - name: Install dependencies
         run: npm install axios
 
-      - name: Update data.json with image
+      - name: Process Figma update
         env:
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
-          UPDATE_DATA: ${{ toJson(github.event.client_payload) }}
+          WEBHOOK_PASSCODE: ${{ secrets.WEBHOOK_PASSCODE }}
+          PAYLOAD: ${{ toJson(github.event.client_payload) }}
         run: |
           node << EOF
           const axios = require('axios');
           const fs = require('fs').promises;
 
           async function processUpdate() {
-            const updateData = JSON.parse(process.env.UPDATE_DATA);
-            const { file_key, timestamp, triggered_by, description, file_name, created_components, modified_components, created_styles, modified_styles } = updateData;
+            const payload = JSON.parse(process.env.PAYLOAD);
+            
+            // Verify passcode
+            if (payload.passcode !== process.env.WEBHOOK_PASSCODE) {
+              console.error('Invalid passcode');
+              process.exit(1);
+            }
+
+            // Handle PING event
+            if (payload.event_type === 'PING') {
+              console.log('Received PING event. Webhook setup successful.');
+              process.exit(0);
+            }
+
+            // Only process LIBRARY_PUBLISH events
+            if (payload.event_type !== 'LIBRARY_PUBLISH') {
+              console.log(`Received ${payload.event_type} event. Ignoring.`);
+              process.exit(0);
+            }
+
+            const { file_key, timestamp, triggered_by, description, file_name } = payload;
 
             try {
               // Get image preview
@@ -49,10 +69,15 @@ jobs:
                 triggered_by,
                 timestamp,
                 preview_image,
-                created_components,
-                modified_components,
-                created_styles,
-                modified_styles
+                created_components: payload.created_components,
+                modified_components: payload.modified_components,
+                deleted_components: payload.deleted_components,
+                created_styles: payload.created_styles,
+                modified_styles: payload.modified_styles,
+                deleted_styles: payload.deleted_styles,
+                created_variables: payload.created_variables,
+                modified_variables: payload.modified_variables,
+                deleted_variables: payload.deleted_variables
               };
 
               // Read existing data.json
