--- a/.github/workflows/update-design-system.yml
+++ b/.github/workflows/update-design-system.yml
@@ -28,7 +28,7 @@ jobs:
           WEBHOOK_PASSCODE: ${{ secrets.WEBHOOK_PASSCODE }}
           PAYLOAD: ${{ toJson(github.event.client_payload) }}
         run: |
-          node << EOF
+          node - << EOF
           const axios = require('axios');
           const fs = require('fs').promises;
 
