--- a/.github/workflows/update-design-system.yml
+++ b/.github/workflows/update-design-system.yml
@@ -22,8 +22,21 @@ jobs:
       - name: Install dependencies
         run: npm install axios
 
-      - name: Create Node.js script
+      - name: Verify Webhook Passcode
+        env:
+          WEBHOOK_PASSCODE: ${{ secrets.WEBHOOK_PASSCODE }}
+          PAYLOAD: ${{ toJson(github.event.client_payload) }}
         run: |
+          payload=$(echo $PAYLOAD | jq -r '.')
+          received_passcode=$(echo $payload | jq -r '.passcode')
+          if [ "$received_passcode" != "$WEBHOOK_PASSCODE" ]; then
+            echo "Invalid passcode received"
+            exit 1
+          fi
+          echo "Passcode verified successfully"
+
+            - name: Create Node.js script
+          run: |
           cat << EOF > process_update.js
           const axios = require('axios');
           const fs = require('fs').promises;
@@ -78,6 +91,8 @@ jobs:
                 created_styles: styles?.created || [],
                 modified_styles: styles?.modified || []
               };
+
+              console.log('New update data:', JSON.stringify(newUpdate, null, 2));
 
               console.log('Reading existing data.json');
               // Read existing data.json
